--- a/src/main/resources/static/css/cards.css
+++ b/src/main/resources/static/css/cards.css
@@ -1,121 +1,119 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap');
+@mixin media() {
+    @media (min-width: 768px) {
+        @content;
+    }
+}
 
-* {
+body, html {
+    font-family: 'Vollkorn', serif;
+    font-weight: 400;
+    line-height: 1.3;
+    font-size: 16px;
+}
+
+.siteTitle {
+    display: block;
+    font-weight: 900;
+    font-size: 30px;
+    margin: 20px 0;
+}
+
+@include media {
+    font-size: 60px;
+}
+
+header,
+main,
+footer {
+    max-width: 960px;
+    margin: 0 auto;
+}
+
+.card {
+    height: 400px;
+    position: relative;
+    padding: 20px;
     box-sizing: border-box;
-}
-
-.page-contain {
     display: flex;
-    min-height: 100vh;
-    align-items: center;
-    justify-content: center;
-    background: #E7F3F1;
-    border: .75em solid white;
-    padding: 2em;
-    font-family: 'Open Sans', sans-serif;
+    align-items: flex-end;
+    text-decoration: none;
+    border: 4px solid darkblue;
+    margin-bottom: 20px;
+    background-image: url('https://images.unsplash.com/photo-1516051662687-567d7c4e8f6a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1868&q=80');
+    background-size: cover;
+}
+@include media {
+    height: 500px;
 }
 
-.data-card {
+
+.inner {
+    height: 50%;
     display: flex;
     flex-direction: column;
-    max-width: 20.75em;
-    min-height: 20.75em;
-    overflow: hidden;
-    border-radius: .5em;
-    text-decoration: none;
+    justify-content: center;
+    align-items: center;
     background: white;
-    margin: 1em;
-    padding: 2.75em 2.5em;
-    box-shadow: 0 1.5em 2.5em -.5em rgba(#000000, .1);
-    transition: transform .45s ease, background .45s ease;
+    box-sizing: border-box;
+    padding: 40px;
+}
+@include media {
+    width: 50%;
+    height: 100%;
 }
 
-h3 {
-    color: #2E3C40;
-    font-size: 3.5em;
-    font-weight: 600;
-    line-height: 1;
-    padding-bottom: .5em;
-    margin: 0 0 0.142857143em;
-    border-bottom: 2px solid #753BBD;
-    transition: color .45s ease, border .45s ease;
-}
 
-h4 {
-    color: #627084;
-    text-transform: uppercase;
-    font-size: 1.125em;
+.title {
+    font-size: 24px;
+    color: black;
+    text-align: center;
     font-weight: 700;
-    line-height: 1;
-    letter-spacing: 0.1em;
-    margin: 0 0 1.777777778em;
-    transition: color .45s ease;
+    color: #181818;
+    text-shadow: 0px 2px 2px #a6f8d5;
+    position: relative;
+    margin: 0 0 20px 0;
+}
+@include media {
+    font-size: 30px;
 }
 
-p {
-    opacity: 0;
-    color: #FFFFFF;
-    font-weight: 600;
-    line-height: 1.8;
-    margin: 0 0 1.25em;
-    transform: translateY(-1em);
-    transition: opacity .45s ease, transform .5s ease;
+
+.subtitle {
+    color: darkgreen;
+    text-align: center;
 }
 
-.link-text {
-    display: block;
-    color: #753BBD;
-    font-size: 1.125em;
-    font-weight: 600;
-    line-height: 1.2;
-    margin: auto 0 0;
-    transition: color .45s ease;
+.card2 {
+    background-image: url('https://images.unsplash.com/photo-1496317556649-f930d733eea3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
 }
 
-svg {
-    margin-left: .5em;
-    transition: transform .6s ease;
+.card3 {
+    background-image: url('https://images.unsplash.com/photo-1557576842-3bc6093a5085?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
 }
 
-path {
-    transition: fill .45s ease;
+footer {
+    display: flex;
+    justify-content: center;
+    margin: 40px 0;
 }
 
-:hover {
-    background: #753BBD;
-    transform: scale(1.02);
-}
-h3 {
-    color: #FFFFFF;
-    border-bottom-color: #A754C4;
+.footerLink {
+    margin-right: 12px;
+    color: #181818;
+    text-decoration: none;
+    position: relative;
 }
 
-h4 {
-    color: #FFFFFF;
+.after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: rgba(#b0215e, 0.3);
+    left: 0;
+    bottom: 0;
 }
 
-p {
-    opacity: 1;
-    transform: none;
-}
-
-.link-text {
-    color: #FFFFFF;
-}
-
-svg {
-    animation: point 1.25s infinite alternate;
-}
-
-path {
-    fill: #FFFFFF;
-}
-
-@keyframes point {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(.125em);
-    }
+.last-child {
+    margin-right: 0;
 }
