--- a/src/main/resources/templates/add_employee.html
+++ b/src/main/resources/templates/add_employee.html
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <form th:action="@{/employee/add}" th:object="${employee}" method="post"
+                        <form th:action="@{'/companies/'+${companyId}+'/employee/post'}" th:object="${employee}"  method="post"
                               enctype="multipart/form-data">
                             <fieldset>
                                 <div class="font-weight-normal mb-3">
@@ -73,28 +73,6 @@
                                                 <input type="text" th:field="${employee.phone_number}"
                                                        class="form-control input-lg"
                                                        title="Phone Number"/>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <!--                                    <div class="form-group">-->
-                                    <!--                                        <label>Employee's Status</label>-->
-                                    <!--                                        <select id="company" name="company" th:field="*{company}" class="form-control col-md-7 col-xs-12"  required="true">-->
-                                    <!--                                        <option th:value="''" th:text="Select"></option>-->
-                                    <!--                                        <option th:each="company : ${companies}" th:value="${company.getId()}" th:text="${i.statusname}" th:selected="${employee.setCompany(company)}"></option>-->
-                                    <!--                                        </select>-->
-                                    <!--                                    </div>-->
-
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <div class="input-group input-group-static mb-3">
-                                                <select class="form-control" id="company" name="company">
-                                                    <option value="company">Choose Company</option>
-                                                    <option th:each="company : ${companies}"
-                                                            th:value="${company}"
-                                                            th:text="${company.getName()}"></option>
-                                                </select>
-
                                             </div>
                                         </div>
                                     </div>
