--- a/src/main/resources/templates/company.html
+++ b/src/main/resources/templates/company.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/static/css/login.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
-    <link href="css/nucleo-icons.css" rel="stylesheet"/>
-    <link href="css/nucleo-svg.css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
+    <link href="/css/nucleo-icons.css" rel="stylesheet"/>
+    <link href="/css/nucleo-svg.css" rel="stylesheet"/>
     <link ref="stylesheet" href="/css/cards.css">
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <link id="pagestyle" href="css/material-kit.css?v=3.0.2" rel="stylesheet"/>
+    <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
@@ -28,9 +29,9 @@
                 </div>
             </div>
         </div>
-        <a class="submit-btn" href="http://localhost:8089/company/add">Add</a>
+        <a class="submit-btn" th:text="'Create'+'Employee'" th:href="@{'/companies/'+${companyId}+'/employee/add'}"></a>
         <a class="active" th:with="companyId=${companyId}"
-           th:href="@{'/companies/'+ ${companyId} + '/edit'}">Edit</a>
+           th:href="@{'/companies/'+${companyId}+'/edit'}">Edit</a>
         <a class="btn-danger" th:href="@{'/companies/'+${companyId}+'/delete'}">Delete</a>
     </div>
 </div>
