--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,19 +7,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
-    <link href="css/nucleo-icons.css" rel="stylesheet"/>
-    <link href="css/nucleo-svg.css" rel="stylesheet"/>
-    <link ref="stylesheet" href="/css/cards.css">
+    <link href="/css/nucleo-icons.css" rel="stylesheet"/>
+    <link href="/css/nucleo-svg.css" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <link id="pagestyle" href="css/material-kit.css?v=3.0.2" rel="stylesheet"/>
+    <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
 <div class="container">
     <div class="row">
         <div class="col card-deck ml-5 my-3" style="color: gray" th:if="${!companies.isEmpty()}">
-            <div class="card" th:each="company : ${companies}">
+            <div class="card w-lg-30" th:each="company : ${companies}">
                 <div class="card-body">
                     <div>
                         <a class="active" th:href="@{'/companies/'+ ${company.getId()}}"
