--- a/src/main/resources/templates/add_company.html
+++ b/src/main/resources/templates/add_company.html
@@ -41,7 +41,7 @@
                                         <div class="input-group input-group-static mb-3">
                                             <div class="form-group">
                                                 <label>name <span class="text-danger">*</span></label>
-                                                <input type="text" th:field="*{name}" class="form-control input-lg"
+                                                <input type="text" th:field="*{company.name}" class="form-control input-lg"
                                                        title="name" required/>
                                             </div>
                                         </div>
@@ -49,7 +49,7 @@
                                     <div class="col-md-6">
                                         <div class="input-group input-group-static mb-3">
                                             <label>Email: <span class="text-danger">*</span></label>
-                                            <input type="email" th:field="*{email}"
+                                            <input type="email" th:field="*{company.email}"
                                                    class="form-control input-lg"
                                                    title="email" required/>
                                         </div>
@@ -58,7 +58,7 @@
                                         <div class="col-md-12">
                                             <div class="input-group input-group-static mb-3">
                                                 <label>Website <span class="text-danger">*</span></label>
-                                                <input type="text" th:field="*{website}"
+                                                <input type="text" th:field="*{company.website}"
                                                        class="form-control input-lg"
                                                        title="website"
                                                        required/>
